fix spacing

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -44,15 +44,6 @@ height: 400px;
     box-shadow: 10px 10px 10px #888888;
 }
 
-.home-background {
-  width: 100%;
-  // margin-bottom: -2px;
-  height: 100%;
-  // background-image: -webkit-linear-gradient(bottom,#abe2c7 10%, #d6fadf 20%);
-  background-color:#EEAA7B  ;
-  padding-bottom:40px;
-}
-
 .first-box-padding {
   padding-bottom: 40px;
 }
@@ -70,6 +61,13 @@ height: 400px;
   background-color: #66B9BF;
   width: 100%;
   height: 100%;
+}
+
+.third-box {
+  width: 100%;
+  height: 100%;
+  background-color:#EEAA7B  ;
+  padding-bottom:40px;
 }
 
 .service-box {
